tests/paczka1/small_fuzzy/68562203.err
Error in line 3: vFwC3N A161 12,1
Error in line 10: A161 S397 91,3
Error in line 8: vFwC3N S405 97,2
